# alphaplayer

./: .gitignore  MANIFEST.in  PROMPT.md  README.md  alphaplayer.desktop  alphaplayer.spec  pyproject.toml
.github/workflows/: publish.yml
alphaplayer/: __init__.py  __main__.py  app.py
